allow null values in Sheet.createRow(); add some unit tests