@@ -19,6 +19,7 @@ import com.dua3.cabe.annotations.Nullable;
 import com.dua3.meja.util.RectangularRegion;
 
 import java.beans.PropertyChangeListener;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
@@ -286,7 +287,7 @@ public interface Sheet extends Iterable<Row>, ReadWriteLock {
      * @return new row instance
      */
     default Row createRow(Object... values) {
-        return createRowWith(List.of(values));
+        return createRowWith(Arrays.asList(values));
     }
 
     /**
